# serverpanel

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 9ee050a1c85a_initial_baseline.py  b27b27bc40fa_recovery_history.py  c3d4e5f6a7b8_server_host_key.py  d4e5f6a7b8c9_backup_progress.py  e5a6b7c8d9e0_byte_progress.py
docs/: ARCHITECTURE.md  HISTORY.md  OPERATIONS.md  RESTORE_TEST.md
scripts/: bootstrap-mac.sh  restore.command
src/serverpanel/: __init__.py  config.py  main.py
src/serverpanel/application/catalogs/: os_images.py  server_templates.py  software.py
src/serverpanel/application/importers/: hetzner_recovery.py  seed.py
src/serverpanel/application/services/: backup_service.py  install_service.py  recovery_service.py  self_backup_service.py
src/serverpanel/application/static/scripts/: backup.ps1  watchdog.ps1
src/serverpanel/domain/: backup.py  backup_progress.py  enums.py  exceptions.py  i18n.py  models.py  progress.py  providers.py  rotation.py
src/serverpanel/infrastructure/: crypto.py
src/serverpanel/infrastructure/auth/: backend.py  oauth.py
src/serverpanel/infrastructure/database/: engine.py  models.py
src/serverpanel/infrastructure/providers/: __init__.py
src/serverpanel/infrastructure/ssh/: client.py
src/serverpanel/presentation/: background.py  csrf.py  dependencies.py  middleware.py  progress.py  ratelimit.py  templates.py  websocket.py  ws_auth.py
src/serverpanel/presentation/routers/: auth.py  backups.py  dashboard.py  install.py  recovery.py  servers.py  settings.py  storages.py
src/serverpanel/static/css/: app.css
src/serverpanel/static/js/: app.js  backup_builder.js
src/serverpanel/templates/: base.html  dashboard.html  settings.html
src/serverpanel/templates/auth/: login.html  register.html
src/serverpanel/templates/backups/: detail.html  edit.html  index.html  run.html
src/serverpanel/templates/install/: index.html  progress.html  wizard.html
src/serverpanel/templates/partials/: action_result.html  server_status.html  server_status_dot.html
src/serverpanel/templates/recovery/: index.html  progress.html  wizard.html
src/serverpanel/templates/servers/: add.html  detail.html  list.html  provider_edit.html
src/serverpanel/templates/storages/: edit.html
tests/: conftest.py
tests/test_application/: test_backup_report_integrity.py  test_scheduled_task_validation.py
tests/test_domain/: test_backup_progress.py  test_backup_schema.py  test_config_validator.py  test_i18n.py  test_rotation.py
tests/test_infrastructure/: test_crypto.py  test_schedule_parser.py  test_ssh_host_key.py
tests/test_presentation/: test_health.py  test_storage_crud.py
(+18 files in other folders)
